# pyestudos

./: .coverage  .coveragerc  .pre-commit-config.yaml  .pylintrc  pyproject.toml  pytest.ini  requirements.txt
pytestes/: exceptions.py  log.py
pytestes/testes/: bytebank.py  jogo.py
tests/: test_bytebank.py  test_pytest.py
