[tool.poetry]
name = "pytestes"
version = "0.1.0"
description = ""
authors = ["Teogenes <teogenes@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
pytest-cov = "^3.0.0"
pylint = "^2.15.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
